corrected typo in backToTop anchor elements, adjusted hovering effect for menu bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     
     <header class="header">
-        <h1>Odin Recipes</h1>
+        <h1 id="home">Odin Recipes</h1>
         <p>A special set of selected recipes for a lovely meal with family.</p>
     </header>
 
@@ -66,7 +66,7 @@
                 <li>Assemble the rolls.</li>
                 <li>Fry over medium heat. Flip over a few times to ensure even browning. When they become golden, transfer out to a tray lined with kitchen paper to absorb excess oil.</li>
             </ol>
-            <a href="home" class="backToTop">Top</a>
+            <a href="#home" class="backToTop">Top</a>
             </article>
         </section>
         <section class="recipe soup hidden">
@@ -94,7 +94,7 @@
                 <li>To finish off, pour in heavy cream and simmer the soup for a final 5 minutes.</li>
                 <li>Adjust the seasonings and ladle Lohikeitto into the bowls. Serve with rye croutons or crackers.</li>
             </ol>
-            <a href="home" class="backToTop">Top</a>
+            <a href="#home" class="backToTop">Top</a>
             </article>
         </section>
         <section class="recipe main hidden">
@@ -127,7 +127,7 @@
                         Serve: Serve with lemon wedges and mustard over mashed potatoes.
                     </li>
                 </ol>
-                <a href="home" class="backToTop">Top</a>
+                <a href="#home" class="backToTop">Top</a>
             </article>
         </section>
         <section class="recipe dessert hidden">
@@ -183,7 +183,7 @@
                         Pipe whipped cream on top if desired. Then dust with cocoa just before serving. Store leftovers in an airtight container in the fridge up to 3 days.
                     </li>
                 </ol>
-                <a href="home" class="backToTop">Top</a>
+                <a href="#home" class="backToTop">Top</a>
             </article>
         </section>
     </main>
