added image to the article, adjusted hovering effect on menu

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
             <h2 role="type-title"><span role="title-container">appretizer</span></h2>
             <article>
             <p class="credit">I am not the author! This recipe (both picture and text) is originally from the following website. https://redhousespice.com/chinese-spring-rolls/</p>
+            <figure>
+                <h3>chinese spring rolls</h3>
+                <img src="images/deep-fried-spring-rolls.jpg" class="dish_pic" alt="Chinese spring rolls">
+            </figure>
             <p class="summary">A tried and tested recipe for Chinese spring rolls. You don't need to precook the filling. Two frying methods are provided.</p>
-            <h3>Ingredients</h3>
+            <h4>Ingredients</h4>
             <ul class="ingredients">
                 <li>For the wrappers
                     <ul>
@@ -59,7 +63,7 @@
                     </ul>
                 </li>
             </ul>
-            <h3>Cooking Instructions</h3>
+            <h4>Cooking Instructions</h4>
             <ol>
                 <li>Put all the ingredients for the filling into a large mixing bowl (NB: leave out one egg yolk for brushing the wrappers).</li>
                 <li>Add all the seasonings. Mix until well combined (It’s best to do so with your hands. Wear kitchen gloves if available).</li>
@@ -73,8 +77,12 @@
             <h2 role="type-title"><span role="title-container">soup</span></h2>
             <article>
             <p class="credit">I am not the author! This recipe (both picture and text) is originally from the following website. https://www.lavenderandmacarons.com/lohikeitto-recipe-the-most-delicious-salmon-soup-ever/</p>
+            <figure>
+                <h3>salmon soup</h3>
+                <img src="images/salmon-soup.jpg" class="dish_pic" alt="Salmon soup">
+            </figure>
             <p class="summary">A delicious and the easiest ever salmon soup that is so popular in Finland. Made in just 30 minutes, this cozy and hearty fish soup is sure to warm you on the chilly winter nights.</p>
-            <h3>Ingredients</h3>
+            <h4>Ingredients</h4>
             <ul class="ingredients">
                 <li>7 c vegetable or fish broth</li>
                 <li>4 medium potatoes cubed</li>
@@ -86,7 +94,7 @@
                 <li>¼ teaspoon pepper</li>
                 <li>⅓ c dill chopped</li>
             </ul>
-            <h3>Cooking Instructions</h3>
+            <h4>Cooking Instructions</h4>
             <ol>
                 <li>Add fish or vegetable broth in a large Dutch Oven or stock pot. Bring to a boil.</li>
                 <li>Add potatoes and cook for 15 minutes. Stir in chopped carrot, minced onion and coriander and cook for another 5 minute.</li>
@@ -101,8 +109,12 @@
             <h2 role="type-title"><span role="title-container">main</span></h2>
             <article>
                 <p class="credit">I am not the author! This recipe (both picture and text) is originally from the following website. https://www.jocooks.com/recipes/pork-schnitzel/</p>
+                <figure>
+                    <h3>pork schnitzel</h3>
+                    <img src="images/pork-schnitzel.jpg" class="dish_pic" alt="Pork schnitzel">
+                </figure>
                 <p class="summary">This is the best recipe for Pork Schnitzel! Made with pork cutlets and a handful of simple ingredients, you'll be set with a super easy and delicious dinner perfect for any night of the week.</p>
-                <h3>Ingredients</h3>
+                <h4>Ingredients</h4>
                 <ul class="ingredients">
                     <li>10 pork cutlets</li>
                     <li>1 teaspoon salt</li>
@@ -112,7 +124,7 @@
                     <li>2 cups breadcrumbs</li>
                     <li>vegetable oil</li>
                 </ul>
-                <h3>Cooking Instructions</h3>
+                <h4>Cooking Instructions</h4>
                 <ol>
                     <li>
                         Tenderize the pork: Using the flat end of a meat tenderizer, pound the pork working from the center out until the cutlets are ¼" thick. Season each pork cutlet with salt and pepper.
@@ -134,8 +146,12 @@
             <h2 role="type-title"><span role="title-container">dessert</span></h2>
             <article>
                 <p class="credit">I am not the author! This recipe (both picture and text) is originally from the following website. https://www.alsothecrumbsplease.com/tiramisu-cake-recipe/</p>
+                <figure>
+                    <h3>tiramisu cake</h3>
+                    <img src="images/tiramisu-cake.jpg" class="dish_pic" alt="Tiramisu cake">
+                </figure>
                 <p class="summary">This Tiramisu Cake is made of genoise cake layers brushed with espresso and filled with irresistibly creamy coffee mascarpone cream. There are no raw eggs in the frosting and is therefore safe to eat. All you need are just 10 ingredients!</p>
-                <h3>Ingredients</h3>
+                <h4>Ingredients</h4>
                 <ul class="ingredients">
                     <li>Genoise Cake
                         <ul>
@@ -162,7 +178,7 @@
                         </ul>
                     </li>
                 </ul>
-                <h3>Cooking Instructions</h3>
+                <h4>Cooking Instructions</h4>
                 <ol>
                     <li>
                         Preheat oven to 350°F / 175°C. Line the bottom and the sides of three 8" (20cm) baking pans with parchment paper. Set aside.
